test/corpus/header.txt
================
Module Declaration
================

module foo;

---

(source_file
 (module_declaration
  (identifier)))

================
Module Import
================

import foo;

---

(source_file
 (module_import
  (identifier)))

================
Module Import with "as"
================

import foo as bar;

---

(source_file
 (module_import
  (identifier)
  (identifier)))
