test/corpus/switch.txt
================
Empty Switch
================

switch foo, {};

---

(source_file
 (switch (identifier)))

================
Single Switch
================

switch foo, { .x 42 };

---

(source_file
 (switch
  (identifier)
  (identifier)
  (integer_literal)))

================
Multiple Switch, Hard Separator
================

switch foo, { .x 42; .y 69 };

---

(source_file
 (switch
  (identifier)
  (identifier)
  (integer_literal)
  (identifier)
  (integer_literal)))

================
Multiple Switch, Hard Separators
================

switch foo, { .x 42; .y 69; };

---

(source_file
 (switch
  (identifier)
  (identifier)
  (integer_literal)
  (identifier)
  (integer_literal)))

================
Multiple Switch, Soft Separator
================

switch foo, { .x 42, .y 69 };

---

(source_file
 (switch
  (identifier)
  (identifier)
  (integer_literal)
  (identifier)
  (integer_literal)))

================
Multiple Switch, Soft Separators
================

switch foo, { .x 42, .y 69, };

---

(source_file
 (switch
  (identifier)
  (identifier)
  (integer_literal)
  (identifier)
  (integer_literal)))
